--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -10,6 +10,7 @@ allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:601:1100::6524;
+allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
@@ -108,7 +109,6 @@ allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
-allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
@@ -134,7 +134,6 @@ allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
-allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -197,7 +196,6 @@ allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
-allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fe09::2;
@@ -211,7 +209,6 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:f530:8002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
-allow 2620:18c:0:192::e0:130;
 allow 2620:18c:0:192::e0:131;
 allow 2620:18c:0:192::e0:132;
 allow 2620:18c:0:192::e0:133;
@@ -624,7 +621,6 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3ea:882::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
