--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -23,6 +23,7 @@ allow 2001:4b20:12:f001::105;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
+allow 2001:678:9ec:34:7f5b:3d7:bb3e:b8e6;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -134,6 +135,7 @@ allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
+allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -179,12 +181,9 @@ allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
-allow 2605:6400:30:f414:42ce:c612:dab8:1337;
 allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
-allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 allow 2605:6400:30:f503::1;
 allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
-allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
@@ -193,10 +192,7 @@ allow 2605:6400:30:f77f:f41c:2bce:7d61:210b;
 allow 2605:6400:30:f77f:f41c:2bce:7d61:2e06;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
-allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
-allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
-allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fe09::2;
 allow 2605:a140:2262:7686::1;
@@ -209,6 +205,7 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:f530:8002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
+allow 2620:18c:0:192::e0:130;
 allow 2620:18c:0:192::e0:131;
 allow 2620:18c:0:192::e0:132;
 allow 2620:18c:0:192::e0:133;
@@ -232,6 +229,18 @@ allow 2620:18c:0:192::e0:150;
 allow 2620:18c:0:192::e0:151;
 allow 2620:18c:0:192::e0:152;
 allow 2620:18c:0:192::e0:153;
+allow 2620:18c:0:192::e0:154;
+allow 2620:18c:0:192::e0:155;
+allow 2620:18c:0:192::e0:156;
+allow 2620:18c:0:192::e0:157;
+allow 2620:18c:0:192::e0:158;
+allow 2620:18c:0:192::e0:159;
+allow 2620:18c:0:192::e0:160;
+allow 2620:18c:0:192::e0:161;
+allow 2620:18c:0:192::e0:162;
+allow 2620:18c:0:192::e0:163;
+allow 2620:18c:0:192::e0:164;
+allow 2620:18c:0:192::e0:166;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
 allow 2620:7:6001::103;
@@ -435,7 +444,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -621,6 +629,7 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
