--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -149,7 +149,6 @@ set_real_ip_from 149.102.153.38;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.44.47;
-set_real_ip_from 151.216.64.56;
 set_real_ip_from 152.32.181.53;
 set_real_ip_from 152.32.199.79;
 set_real_ip_from 152.32.206.127;
@@ -252,6 +251,7 @@ set_real_ip_from 185.100.87.166;
 set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
+set_real_ip_from 185.104.120.10;
 set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
@@ -585,10 +585,6 @@ set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.167.206.206;
-set_real_ip_from 198.251.84.163;
-set_real_ip_from 198.251.84.237;
-set_real_ip_from 198.251.88.18;
-set_real_ip_from 198.251.89.96;
 set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.50.212.160;
 set_real_ip_from 198.58.107.53;
@@ -635,7 +631,6 @@ set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:620:20d0::23;
 set_real_ip_from 2001:620:20d0::24;
 set_real_ip_from 2001:638:301:f732::150;
-set_real_ip_from 2001:678:9ec:34:7f5b:3d7:bb3e:b8e6;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
@@ -1000,16 +995,6 @@ set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
-set_real_ip_from 2605:6400:30:f174::;
-set_real_ip_from 2605:6400:30:f174:1:1:1:1;
-set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
-set_real_ip_from 2605:6400:30:f174:1:2:3:4;
-set_real_ip_from 2605:6400:30:f174::42;
-set_real_ip_from 2605:6400:30:f174:42:42::;
-set_real_ip_from 2605:6400:30:f174:42:42:42:0;
-set_real_ip_from 2605:6400:30:f174:42:42:42:42;
-set_real_ip_from 2605:6400:30:f174:4:3:2:1;
-set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
@@ -1248,6 +1233,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1276,6 +1262,7 @@ set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -1725,6 +1712,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
