--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -23,7 +23,6 @@ set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:620:20d0::23;
 set_real_ip_from 2001:620:20d0::24;
 set_real_ip_from 2001:638:301:f732::150;
-set_real_ip_from 2001:678:9ec:34:7f5b:3d7:bb3e:b8e6;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
@@ -169,16 +168,6 @@ set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
-set_real_ip_from 2605:6400:30:f174::;
-set_real_ip_from 2605:6400:30:f174:1:1:1:1;
-set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
-set_real_ip_from 2605:6400:30:f174:1:2:3:4;
-set_real_ip_from 2605:6400:30:f174::42;
-set_real_ip_from 2605:6400:30:f174:42:42::;
-set_real_ip_from 2605:6400:30:f174:42:42:42:0;
-set_real_ip_from 2605:6400:30:f174:42:42:42:42;
-set_real_ip_from 2605:6400:30:f174:4:3:2:1;
-set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
@@ -416,6 +405,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -444,6 +434,7 @@ set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
