--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -131,7 +131,6 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 131.72.79.38;
-allow 13.210.66.194;
 allow 135.125.239.70;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -930,6 +929,7 @@ allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
 allow 23.236.122.193;
+allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
@@ -1545,7 +1545,6 @@ allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:de40:21:1be4::;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
-allow 3.107.173.123;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
@@ -1739,13 +1738,11 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.206.66.20;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.79.207.222;
 allow 57.128.212.103;
 allow 57.128.220.107;
 allow 57.129.91.235;
