--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -109,6 +109,7 @@ allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
+allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
