--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -131,7 +131,6 @@ deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
 deny 131.72.79.38;
-deny 13.210.66.194;
 deny 135.125.239.70;
 deny 136.244.111.163;
 deny 138.59.18.110;
@@ -930,6 +929,7 @@ deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
 deny 23.236.122.193;
+deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
 deny 2400:8905::f03c:95ff:fe67:ec03;
 deny 2400:8907::f03c:95ff:fe79:8c79;
@@ -1545,7 +1545,6 @@ deny 2a12:a800:9:1:45:88:186:92;
 deny 2a12:de40:21:1be4::;
 deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:d::d28b;
-deny 3.107.173.123;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
@@ -1739,13 +1738,11 @@ deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.206.66.20;
 deny 54.36.101.21;
 deny 54.36.108.162;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
-deny 54.79.207.222;
 deny 57.128.212.103;
 deny 57.128.220.107;
 deny 57.129.91.235;
